# new-acm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  acm  copy  run  run.cpp  test  test.cpp
db/: db.txt
include/: authenticator.h  config.h  storage_manager.h
lib/: clip.cpp  clip.h  clip_lock_impl.h  clip_x11.cpp  usage.h  utility.cpp
src/: authenticator.cpp  main.cpp  storage_manager.cpp
